--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -26,7 +26,7 @@
                     </span>
                 </div>          
             </ion-item>
-            <ion-item menu-close href="#" class="item-royal">
+            <ion-item menu-close href="#/underconstruction/underconstruction" class="item-royal">
                 <div class="text-gray">
                     <i >
                         <img class="vertical-middle" src="img/Icons/MenuIcon2.png" />
@@ -46,7 +46,7 @@
                     </span>
                 </div>
             </ion-item>
-            <ion-item menu-close ng-click="login()" class="item-royal">
+            <ion-item menu-close ng-click="login()" class="item-royal" href="#/underconstruction/underconstruction">
                 <div class="text-gray">
                     <i >
                         <img class="vertical-middle" src="img/Icons/MenuIcon4.png" />
@@ -71,7 +71,7 @@
             <a class="button button-block bg-gray text-dark" href="#">เข้าสู่ระบบ</a>
 
             <div class="space-top">
-                <a class="button button-block button-balanced ">
+                <a class="button button-block button-balanced " href="#/underconstruction/underconstruction">
                     <div class="padding">
                         <h2 class="text-white">
                             <img height="40" src="img/Icons/Playgame.png" />
