--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -71,7 +71,7 @@
             <a class="button button-block bg-gray text-dark" href="#">เข้าสู่ระบบ</a>
 
             <div class="space-top">
-                <a class="button button-block button-balanced " href="#/underconstruction/underconstruction">
+                <a menu-close class="button button-block button-balanced " href="#/underconstruction/underconstruction">
                     <div class="padding">
                         <h2 class="text-white">
                             <img height="40" src="img/Icons/Playgame.png" />
