--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
@@ -25,6 +25,7 @@
                 รางวัลประจำสัปดาห์
             </div>
         </div>
+
         <div class="item no-border text-right" ng-repeat="reward in rewardCtrl.RewardInfo.Rewards">
             <div>
                 <img class="col" src="{{reward.ImagePath}}" />
@@ -34,25 +35,8 @@
             </div>
         </div>
 
-        <!--<div class="item no-border text-right">
-            <div>
-                <img class="col" src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg"/>
-            </div>
-            <div class="">
-                จำนวน 5 รางวัล
-            </div>
-        </div>
-        <div class="item no-border text-right">
-            <div>
-                <img class="col" src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg" />
-            </div>
-            <div class="">
-                จำนวน 2 รางวัล
-            </div>
-        </div>-->
-
         <!-- No Reward -->
-        <div class="item no-border text-right" ng-show="reward.length == 0">
+        <div class="item no-border text-right" ng-show="rewardCtrl.RewardInfo.Rewards.length == 0">
             <div>
                 <img class="col" src="img/Logos/NoReward.png" />
             </div>
