--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/_matchHeaderScore.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/_matchHeaderScore.html
@@ -6,7 +6,7 @@
             </i>
         </div>
         <span class="col col-center text-left font-large">
-            แต้มสะสม 7500
+            แต้มสะสม {{ matchCtrl.AccountInfo.Points }}
         </span>
     </a>
 </div>
