--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/TieFacebookPopup.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/TieFacebookPopup.html
@@ -1,15 +1,15 @@
 ﻿<ion-modal-view class="scroll-middle">
     <ion-content>
-        <div class="text-center padding">
+        <div class="text-center ">
             <h5>กรุณาลงทะเบียนก่อนร่วมกิจกรรมลุ้นรางวัล</h5>
         </div>
         <div class="row row-center">
             <div class="col col-center">
                 <div class="padding-bottom">
-                    <button class="button button-small block-center col button-calm">ลงทะเบียนผ่าน Facebook</button>
+                    <a class="button button-small block-center col button-calm" href="#/syncdata/syncdata" ng-click="TieFacebookPopup.hide()">ลงทะเบียนผ่าน Facebook</a>
                 </div>
                 <div>
-                    <button class="button button-small block-center col button-royal" ng-click="MatchPopup.hide()">ยกเลิก</button>
+                    <button class="button button-small block-center col button-royal" ng-click="TieFacebookPopup.hide()">ยกเลิก</button>
                 </div>
             </div>
         </div>
