--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/MyRewards.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/MyRewards.html
@@ -21,7 +21,7 @@
             </div>
             <div class="list">
                 <div class="item item-thumbnail-left no-border">
-                    <img src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg" />
+                    <img src="img/Logos/BannerReward01Thumbnail.png" />
                     <p>
                         <i>
                             วันที่ 20/12/2558
@@ -31,9 +31,11 @@
                         รางวัลที่ 1
                     </p>
                     <p>
-                        Iphone 6 มูลค่า 25,000 บาท
+                        Samsung GALAXY Note 3
                     </p>
-
+                    <p>
+                        มูลค่า 25,000 บาท
+                    </p>
                     <p>
                         <i>
                             รหัสของรางวัล
@@ -47,17 +49,20 @@
                 </div>
                 <div class="list">
                     <div class="item item-thumbnail-left no-border">
-                        <img src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg" />
+                        <img src="img/Logos/BannerReward02Thumbnail.png" />
                         <p>
                             <i>
                                 วันที่ 20/12/2558
                             </i>
                         </p>
                         <p>
-                            รางวัลที่ 5
+                            รางวัลที่ 2
                         </p>
                         <p>
-                            Iphone 6 มูลค่า 25,000 บาท
+                            เสื้อสโมสรลิเวอร์พูล
+                        </p>
+                        <p>
+                            มูลค่า 7,000 บาท
                         </p>
                         <p>
                             <i>
