--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -68,7 +68,7 @@
                 </div>                
             </ion-item>
 
-            <a class="button button-block bg-gray text-dark" href="#">เข้าสู่ระบบ</a>
+            <a class="button button-block bg-gray text-dark" href="#" ng-click="matchCtrl.LoginWithFacebook()">เข้าสู่ระบบ</a>
 
             <div class="space-top">
                 <a menu-close class="button button-block button-balanced " href="#/underconstruction/underconstruction">
