--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/RewardWinner.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/RewardWinner.html
@@ -8,7 +8,11 @@
                 </b>
                 <br />
                 <b>
-                    Iphone 6 มูลค่า 25,000 บาท 1 รางวัล
+                    Samsung GALAXY Note 3  
+                </b>
+                <br />
+                <b>
+                    มูลค่า 25,000 บาท 1 รางวัล
                 </b>
             </div>
             <div>
@@ -19,7 +23,7 @@
                 </p>
             </div> 
             <div>
-                <img class="col" src="http://www.samsung.com/th/consumer-images/product/smartphone/2015/SM-G920FZKACAM/features/SM-G920FZKACAM-403979-0.jpg" />
+                <img class="col" src="img/Logos/BannerReward01.png" />
             </div>
         </div>
         <div class="item no-border">
@@ -29,7 +33,11 @@
                 </b>
                 <br />
                 <b>
-                    Iphone 5c มูลค่า 12,000 บาท 3 รางวัล
+                    เสื้อสโมสรลิเวอร์พูล 
+                </b>
+                <br />
+                <b>
+                    มูลค่า 1,800 บาท 3 รางวัล
                 </b>
             </div>
             <div>
@@ -50,7 +58,7 @@
                 </p>
             </div>
             <div>
-                <img class="col" src="http://notebookspec.com/web/wp-content/uploads/2013/06/iphone5c-overview-box-2013.png" />
+                <img class="col" src="img/Logos/BannerReward02.png" />
             </div>
         </div>
         <!-- ไม่มีผู้รับรางวัล -->
@@ -61,7 +69,11 @@
                 </b>
                 <br />
                 <b>
-                    Asus Zenfone 2 มูลค่า 3,000 บาท 3 รางวัล
+                    Asus Zenfone 2 
+                </b>
+                <br />
+                <b>
+                    มูลค่า 1,000 บาท 1 รางวัล
                 </b>
             </div>
             <div>
